--- a/Reading_Stringer_database_stimuli_behavior.ipynb
+++ b/Reading_Stringer_database_stimuli_behavior.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {
     "id": "JTm-WM99LF9m"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Facundo\\anaconda3\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.23.1\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -21,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {
     "id": "sUzpeuDJLgmo"
    },
@@ -34,14 +43,14 @@
     "\n",
     "# url and file name of other data recorded from other mice\n",
     "\n",
-    "# fname = \"stimspont_M150824_MP019_2016-03-23.mat\"\n",
-    "# url = \"https://figshare.com/ndownloader/files/11492555\"\n",
-    "# rat='rat2'\n",
+    "fname = \"stimspont_M150824_MP019_2016-03-23.mat\"\n",
+    "url = \"https://figshare.com/ndownloader/files/11492555\"\n",
+    "rat='rat2'\n",
     "\n",
     "dirf = r'C:\\Users\\Facundo\\Desktop\\CONICET\\Doctorado\\Cursos\\Neuro Match Academy\\Project Continuation/'\n",
-    "fname = \"stimspont_M170714_MP032_2017-08-01.mat\"\n",
-    "url = \"https://figshare.com/ndownloader/files/11492258\"\n",
-    "rat='rat3'\n",
+    "# fname = \"stimspont_M170714_MP032_2017-08-01.mat\"\n",
+    "# url = \"https://figshare.com/ndownloader/files/11492258\"\n",
+    "# rat='rat3'\n",
     "\n",
     "# fname = \"stimspont_M170717_MP033_2017-08-25.mat\"\n",
     "# url = \"https://figshare.com/ndownloader/files/11492255\"\n",
@@ -84,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -92,23 +101,7 @@
     "id": "GPACZKTyLjjy",
     "outputId": "d0c53e76-7771-4912-f182-d741ccdc34f6"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "full resp:  (13101, 19311)\n",
-      "sresp:  (3762, 13101)\n",
-      "istim:  (3762,)\n",
-      "pupilarea:  (19311, 1)\n",
-      "runAngle:  (19311, 1)\n",
-      "runSpeed:  (19311, 1)\n",
-      "motionSVD:  (19311, 500)\n",
-      "motionMask:  (240, 320, 500)\n",
-      "xyz:  (13101, 3)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sresp = dat['stim'][0]['resp'][0] # stim x neurons\n",
     "# spont = dat['stim'][0]['spont'][0] # timepts x neurons\n",
@@ -996,6 +989,25 @@
     "save_list(list([list(x[0]) for x in SPEEDR2_ffnnDEPTH]),rat+'_R2_ffnnDEPTH_Speed')\n",
     "save_list(list([list(x[0]) for x in SPEEDMSE_linearDEPTH]),rat+'_MSE_linearDEPTH_Speed')\n",
     "save_list(list([list(x[0]) for x in SPEEDR2_linearDEPTH]),rat+'_R2_linearDEPTH_Speed')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MSE_ffnnDEPTH_Speed = [[-0.19634664304723626, 0.11723420091467462, -0.0644192207472416, -0.23307081433137333, -0.27258052015807155],\n",
+    "[-0.2107959675443043, 0.07745849324004295, -0.087712479575762, -0.23018753357526123, -0.39932200460253164],\n",
+    "[-0.25555264499032515, 0.0570502405104949, -0.11110496048688878, -0.21383016859146298, -0.2879556779540471],\n",
+    "[-0.13030540062346563, 0.10756923975679133, -0.07202415632603754, -0.17268404184532526, -0.3604388202371005],\n",
+    "[-0.14720074336106248, 0.1232047738587172, -0.04835663091206954, -0.20062903673521082, -0.3507037975147067],\n",
+    "[-0.13125367942551303, 0.1182802308154971, -0.015067799599499221, -0.18745632090725084, -0.2500029847055427],\n",
+    "[-0.11142841590432107, 0.13918127989362394, -0.3104826946294288, -0.2158724069518927, -0.2638080943955985],\n",
+    "[-0.15470968114707273, 0.04740114899408421, -0.1667493833398852, -0.2312878510518197, -0.27551986384432214],\n",
+    "[-0.07221296101629471, 0.11897038297100937, -0.15231702356473842, -0.24168070959866084, -0.2615098022519293],\n",
+    "[-0.08129078996186512, 0.034259339635011044, -0.226061499630686, -0.22335585977106565, -0.275314019463587],\n",
+    "[-0.11741643842468785, 0.009912616497472992, -0.5165465533997977, -0.24801582214088214, -0.25555762722175324]]"
    ]
   },
   {
