--- a/Reading_Stringer_database_stimuli_behavior.ipynb
+++ b/Reading_Stringer_database_stimuli_behavior.ipynb
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,9 +434,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n",
+      "Done\n",
+      "Done\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "save_list(MSE_ffnn,rat+'/'+rat+'_full_MSE_ffnn_PupArea')\n",
     "save_list(R2_ffnn,rat+'/'+rat+'_full_R2_ffnn_PupArea')\n",
@@ -448,7 +459,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0 0\n",
+      "0 0 1\n"
+     ]
+    }
+   ],
    "source": [
     "trained_models_ffnnDEPTH, MSE_ffnnDEPTH, R2_ffnnDEPTH, predictions_ffnnDEPTH = general_depth_decoder(xyz.T[-1],Z,pupilArea,pars)\n",
     "trained_models_linearDEPTH, MSE_linearDEPTH, R2_linearDEPTH, predictions_linearDEPTH = general_depth_decoder(xyz.T[-1],Z,pupilArea,[])"
