--- a/Reading_Stringer_database_general.ipynb
+++ b/Reading_Stringer_database_general.ipynb
@@ -368,7 +368,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def group_depth_decoder(z_depth,XData,yData,groups=[[125,255],[375,475]],pars=[],trials = 5, trials_neuron = 1,nonPCA = False):\n",
+    "def group_depth_decoder(z_depth,XData,yData,groups=[[125,255],[375,475]],pars=[],trials = 5, nonPCA = False):\n",
     "    \n",
     "    T = round(len(yData)*0.25)\n",
     "    L = XData.shape[0]\n",
@@ -376,12 +376,9 @@
     "    pca_layers_zscore = []\n",
     "    z_values = np.unique(z_depth)\n",
     "    \n",
-    "#     minimal_neuron_count = min([len(np.where(z_depth == z_values[layer])[0]) for layer in range(len(z_values))]) #number of neurons in the layer which has the least number of neurons\n",
-    "#     minimal_neuron_count = round(minimal_neuron_count*0.9) # grab 90% of this number\n",
-    "    \n",
     "    trained_models = []\n",
-    "    MSE = np.zeros((len(z_values),trials_neuron,trials))\n",
-    "    R2 = np.zeros((len(z_values),trials_neuron,trials))\n",
+    "    MSE = np.zeros((len(groups),trials))\n",
+    "    R2 = np.zeros((len(groups),trials))\n",
     "    predictions = []\n",
     "    \n",
     "    neurons_per_layer = []\n",
@@ -390,45 +387,43 @@
     "        index_group.append(np.array([int(x) for x in (z_depth>=g[0])*(z_depth<=g[1])]))\n",
     "        neurons_per_layer.append(len(index_group[-1]))\n",
     "        \n",
-    "    minimal_neuron_count = round(min(neurons_per_layer)*0.9)\n",
+    "    minimal_neuron_count = int(min(neurons_per_layer)*0.9)\n",
     "    \n",
     "    for layer in range(len(groups)):\n",
     "#         trained_models.append([])\n",
-    "        predictions.append([]) \n",
+    "        #predictions.append([]) \n",
     "\n",
-    "        for i in range(trials_neuron):\n",
+    "        pca_layer_model = PCA(n_components=500)\n",
     "\n",
-    "            pca_layer_model = PCA(n_components=500)\n",
-    "            \n",
-    "            index = index_group[layer]\n",
-    "            random.shuffle(index)\n",
-    "            pca_layers_zscore.append(pca_model.fit_transform(XData[index[:minimal_neuron_count]].T))\n",
+    "        index = index_group[layer]\n",
+    "        random.shuffle(index)\n",
+    "        pca_layers_zscore.append(pca_model.fit_transform(XData[index[:minimal_neuron_count]].T))\n",
     "\n",
     "#             trained_models[-1].append([])\n",
-    "            predictions[-1].append([])\n",
+    "        #predictions[-1].append([])\n",
     "\n",
-    "            for j in range(trials):\n",
+    "        for j in range(trials):\n",
     "\n",
-    "                X_train, X_test, y_train, y_test = split_dataset(pca_layers_zscore[-1],yData,trials,j,T)\n",
+    "            X_train, X_test, y_train, y_test = split_dataset(pca_layers_zscore[layer],yData,trials,j,T)\n",
     "\n",
-    "                if len(pars)>0:   \n",
-    "                    model_tf = create_custom_model(X_train.shape[1], 1, [100,100], name='model_tf',activation = ['relu','tanh'])\n",
-    "                    model = model_tf()\n",
-    "                    model.fit(X_train,y_train,batch_size=pars[0],epochs=pars[1],verbose=pars[2],validation_data=(X_test, y_test),callbacks=[pars[3]])\n",
-    "                else:\n",
-    "                    model = linear_model.LinearRegression()\n",
-    "                    model.fit(X_train,y_train)\n",
+    "            if len(pars)>0:   \n",
+    "                model_tf = create_custom_model(X_train.shape[1], 1, [100,100], name='model_tf',activation = ['relu','tanh'])\n",
+    "                model = model_tf()\n",
+    "                model.fit(X_train,y_train,batch_size=pars[0],epochs=pars[1],verbose=pars[2],validation_data=(X_test, y_test),callbacks=[pars[3]])\n",
+    "            else:\n",
+    "                model = linear_model.LinearRegression()\n",
+    "                model.fit(X_train,y_train)\n",
     "\n",
     "#                 trained_models[-1].append(model)\n",
     "\n",
-    "                y_pred = model.predict(X_test)\n",
-    "                predictions[-1].append([y_pred,y_test,X_test])\n",
-    "                R2[layer,i,j] = sk.metrics.r2_score(y_test,y_pred)\n",
-    "                MSE[layer,i,j] = sk.metrics.mean_squared_error(y_test,y_pred,squared=False)\n",
-    "                \n",
-    "                print(layer,i,j)\n",
-    "                \n",
-    "    return trained_models, MSE, R2, predictions"
+    "            y_pred = model.predict(X_test)\n",
+    "            #predictions[-1].append([y_pred,y_test,X_test])\n",
+    "            R2[layer,j] = sk.metrics.r2_score(y_test,y_pred)\n",
+    "            MSE[layer,j] = sk.metrics.mean_squared_error(y_test,y_pred,squared=False)\n",
+    "\n",
+    "            print(layer,j)\n",
+    "\n",
+    "    return minimal_neuron_count, MSE, R2, predictions"
    ]
   },
   {
@@ -916,7 +911,7 @@
     }
    ],
    "source": [
-    "for MOUSE_IND in [3,4,5,6,7,8]:\n",
+    "for MOUSE_IND in [0,1,3,4,5,6,7,8]:\n",
     "    mouse_decoding = {}\n",
     "    \n",
     "    rat = mice_files[MOUSE_IND]\n",
@@ -941,19 +936,27 @@
     "    trained_models_ffnn, MSE_ffnn, R2_ffnn, predictions_ffnn = general_decoder(pca_zscore,pupilArea_norm,pars=pars,trials = 15)\n",
     "    trained_models_linear, MSE_linear, R2_linear, predictions_linear = general_decoder(pca_zscore,pupilArea_norm,pars=[],trials = 15)\n",
     "    \n",
-    "    trained_models_ffnnDEPTH, MSE_ffnnDEPTH, R2_ffnnDEPTH, predictions_ffnnDEPTH = group_depth_decoder(dat['med'].T[-1],Z,pupilArea_norm,pars=pars)\n",
-    "    trained_models_linearDEPTH, MSE_linearDEPTH, R2_linearDEPTH, predictions_linearDEPTH = group_depth_decoder(dat['med'].T[-1],Z,pupilArea_norm,pars=[])\n",
+    "    minimal_neuron_count, MSE_ffnnDEPTH, R2_ffnnDEPTH, predictions_ffnnDEPTH = group_depth_decoder(dat['med'].T[-1],Z,pupilArea_norm,pars=pars)\n",
+    "    neuron_count, MSE_ffnnDEPTH_all, R2_ffnnDEPTH_all, predictions_ffnnDEPTH = group_depth_decoder(dat['med'].T[-1],Z,pupilArea_norm,groups=[[125,475]],pars=pars)\n",
+    "    \n",
+    "    minimal_neuron_count, MSE_linearDEPTH, R2_linearDEPTH, predictions_linearDEPTH = group_depth_decoder(dat['med'].T[-1],Z,pupilArea_norm,pars=[])\n",
+    "    neuron_count, MSE_linearDEPTH_all, R2_linearDEPTH_all, predictions_linearDEPTH = group_depth_decoder(dat['med'].T[-1],Z,pupilArea_norm,groups=[[125,475]],pars=[])\n",
     "\n",
     "    SPEEDtrained_models_ffnn, SPEEDMSE_ffnn, SPEEDR2_ffnn, SPEEDpredictions_ffnn = general_decoder(pca_zscore,runSpeed_norm,pars=pars,trials = 15)\n",
     "    SPEEDtrained_models_linear, SPEEDMSE_linear, SPEEDR2_linear, SPEEDpredictions_linear = general_decoder(pca_zscore,runSpeed_norm,pars=[],trials = 15)\n",
     "\n",
-    "    SPEEDtrained_models_ffnnDEPTH, SPEEDMSE_ffnnDEPTH, SPEEDR2_ffnnDEPTH, SPEEDpredictions_ffnnDEPTH = group_depth_decoder(dat['med'].T[-1],Z,runSpeed_norm,pars=pars)\n",
-    "    SPEEDtrained_models_linearDEPTH, SPEEDMSE_linearDEPTH, SPEEDR2_linearDEPTH, SPEEDpredictions_linearDEPTH = group_depth_decoder(dat['med'].T[-1],Z,runSpeed_norm,pars=[])\n",
+    "    minimal_neuron_count, SPEEDMSE_ffnnDEPTH, SPEEDR2_ffnnDEPTH, SPEEDpredictions_ffnnDEPTH = group_depth_decoder(dat['med'].T[-1],Z,runSpeed_norm,pars=pars)\n",
+    "    neuron_count, SPEEDMSE_ffnnDEPTH_all, SPEEDR2_ffnnDEPTH_all, SPEEDpredictions_ffnnDEPTH = group_depth_decoder(dat['med'].T[-1],Z,runSpeed_norm,groups=[[125,475]],pars=pars)\n",
+    "\n",
+    "    minimal_neuron_count, SPEEDMSE_linearDEPTH, SPEEDR2_linearDEPTH, SPEEDpredictions_linearDEPTH = group_depth_decoder(dat['med'].T[-1],Z,runSpeed_norm,pars=[])\n",
+    "    neuron_count, SPEEDMSE_linearDEPTH_all, SPEEDR2_linearDEPTH_all, SPEEDpredictions_linearDEPTH = group_depth_decoder(dat['med'].T[-1],Z,runSpeed_norm,groups=[[125,475]],pars=[])\n",
     "\n",
     "    mouse_decoding['pupilArea'] = pupilArea.T[0]\n",
     "    mouse_decoding['runSpeed'] = runSpeed.T[0]\n",
     "    mouse_decoding['xyz'] = dat['med']\n",
     "    mouse_decoding['size'] = np.array([x[0][0] for x in dat['stat']['footprint'].T[0]])\n",
+    "    mouse_decoding['neurons_used_per_layer'] = minimal_neuron_count\n",
+    "    mouse_decoding['neurons_in_both_layers'] = neuron_count\n",
     "    mouse_decoding['decoding'] = {\n",
     "                        'all_neurons': {\n",
     "                                'Linear': {\n",
@@ -979,28 +982,74 @@
     "                                },\n",
     "    \n",
     "                        'layers': {\n",
+    "                            'layer2_3': {\n",
     "                                'Linear': {\n",
     "                                    'Pupil_Area': {\n",
-    "                                        'R2': R2_linearDEPTH,\n",
-    "                                        'MSE': MSE_linearDEPTH\n",
+    "                                        'R2': R2_linearDEPTH[0],\n",
+    "                                        'MSE': MSE_linearDEPTH[0]\n",
     "                                        },\n",
     "                                    'Speed': {\n",
-    "                                        'R2': SPEEDR2_linearDEPTH,\n",
-    "                                        'MSE': SPEEDMSE_linearDEPTH\n",
+    "                                        'R2': SPEEDR2_linearDEPTH[0],\n",
+    "                                        'MSE': SPEEDMSE_linearDEPTH[0]\n",
     "                                        }\n",
     "                                    },\n",
     "                                'FFNN': {\n",
     "                                    'Pupil_Area': {\n",
-    "                                        'R2': R2_ffnnDEPTH,\n",
-    "                                        'MSE': MSE_ffnnDEPTH\n",
+    "                                        'R2': R2_ffnnDEPTH[0],\n",
+    "                                        'MSE': MSE_ffnnDEPTH[0]\n",
     "                                        },\n",
     "                                    'Speed': {\n",
-    "                                        'R2': SPEEDR2_ffnnDEPTH,\n",
-    "                                        'MSE': SPEEDMSE_ffnnDEPTH\n",
+    "                                        'R2': SPEEDR2_ffnnDEPTH[0],\n",
+    "                                        'MSE': SPEEDMSE_ffnnDEPTH[0]\n",
+    "                                        }\n",
+    "                                    }\n",
+    "                                },\n",
+    "                            'layer4': {\n",
+    "                                'Linear': {\n",
+    "                                    'Pupil_Area': {\n",
+    "                                        'R2': R2_linearDEPTH[1],\n",
+    "                                        'MSE': MSE_linearDEPTH[1]\n",
+    "                                        },\n",
+    "                                    'Speed': {\n",
+    "                                        'R2': SPEEDR2_linearDEPTH[1],\n",
+    "                                        'MSE': SPEEDMSE_linearDEPTH[1]\n",
+    "                                        }\n",
+    "                                    },\n",
+    "                                'FFNN': {\n",
+    "                                    'Pupil_Area': {\n",
+    "                                        'R2': R2_ffnnDEPTH[1],\n",
+    "                                        'MSE': MSE_ffnnDEPTH[1]\n",
+    "                                        },\n",
+    "                                    'Speed': {\n",
+    "                                        'R2': SPEEDR2_ffnnDEPTH[1],\n",
+    "                                        'MSE': SPEEDMSE_ffnnDEPTH[1]\n",
+    "                                        }\n",
+    "                                    }\n",
+    "                                },\n",
+    "                            'both_layers': {\n",
+    "                                'Linear': {\n",
+    "                                    'Pupil_Area': {\n",
+    "                                        'R2': R2_linearDEPTH_all,\n",
+    "                                        'MSE': MSE_linearDEPTH_all\n",
+    "                                        },\n",
+    "                                    'Speed': {\n",
+    "                                        'R2': SPEEDR2_linearDEPTH_all,\n",
+    "                                        'MSE': SPEEDMSE_linearDEPTH_all\n",
+    "                                        }\n",
+    "                                    },\n",
+    "                                'FFNN': {\n",
+    "                                    'Pupil_Area': {\n",
+    "                                        'R2': R2_ffnnDEPTH_all,\n",
+    "                                        'MSE': MSE_ffnnDEPTH_all\n",
+    "                                        },\n",
+    "                                    'Speed': {\n",
+    "                                        'R2': SPEEDR2_ffnnDEPTH_all,\n",
+    "                                        'MSE': SPEEDMSE_ffnnDEPTH_all\n",
     "                                        }\n",
     "                                    }\n",
     "                                }\n",
     "                            }\n",
+    "                        }\n",
     "    \n",
     "    scipy.io.savemat(dirf+mice_names[MOUSE_IND]+'_nonstim_decoding.mat',mouse_decoding)\n",
     "    print(MOUSE_IND)"
@@ -1356,7 +1405,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1370,7 +1419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
